fixed image scroll on mobile

--- a/style.css
+++ b/style.css
@@ -279,6 +279,7 @@ h1 {
   justify-content: space-between;
   margin: 0 auto;
   padding: 20px;
+  align-content: center;
 }
 
 .bullet-box {
